Job Application for Senior Software Engineer - Mobile at TWG.     Senior Software Developer at LogiNext . Senior Software Engineer - Back and/or Front-End (Local or Remote) - PowerDMS - Career Page. Senior Software Engineer: Ruby-on-Rails | Averity.       Senior Software Engineer, Data (EMEA) - Hotjar     . Software Engineer (9279803) - PRO Unlimited @ Facebook - Career Page. Firmware Software Engineer IV - PRO Unlimited @ Facebook - Career Page. Modeling Software Engineer (9382823) - PRO Unlimited @ Facebook - Career Page. Visualization tools software engineer - PRO Unlimited @ Facebook - Career Page. Urbint - Jobs: Software Engineer - Apply online. Progressive technology solutions Software Developer | SmartRecruiters. Job Application for Software Engineer - Visibility  at Fitbit. Job Application for Sr. Android Software Engineer at Fitbit. Job Application for Software Engineer - API Management  at Fitbit. Varo Money - Senior Software Engineer. Varo Money - Senior Software Engineer. Guidewire Software, Inc. Careers - Senior Software Engineer, Front End - Krakow, Poland. Job Application for Principal Software Engineer, Endpoint at ThousandEyes. Looka (formerly Logojoy) - Jobs: Lead Software Engineer - Apply online. Back end or full stack software engineer | Career Movement. Job Application for Software Engineer - Data at Twitch. Netflix - Senior Software Engineer - Data Pipeline Platform. Bosch Group Senior Software Developer (C/C++) for Automated Driving | SmartRecruiters. Bosch Group Professional Internship: Security Software Engineer (M/F) | SmartRecruiters. Software Engineer - Be Quad. Job Application for Embedded Software Engineer - Platforms Software at Lilium. Job Application for Software Developer (.NET Core) at Callibrity. Job Application for Software Engineer in Test - Test Automation at Callibrity. SignalFx - Software Engineer -- Integrations. PaperCut Software - Full Stack Software Engineer. Zscaler Careers - Staff Software Engineer - (C language). Job A

--- a/software.html
+++ b/software.html
@@ -39,28 +39,68 @@
   
     <div class="container">
 <!--Begin body here --> 
-<h5><a href='https://urbint.workable.com/j/E768B2B629'>Urbint - Jobs: Software Engineer - Apply online</a></h5> 
+<h5><a href='https://boards.greenhouse.io/twg/jobs/1589233'>Job Application for Senior Software Engineer - Mobile at TWG</a></h5> 
 <p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://loginext.recruiterbox.com/jobs/fk01is7/'>
+    Senior Software Developer at LogiNext
+</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://powerdms1.applytojob.com/apply/0QQ7bdulz0/Senior-Software-Engineer-Back-Andor-FrontEnd-Local-Or-Remote'>Senior Software Engineer - Back and/or Front-End (Local or Remote) - PowerDMS - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://jobs.crelate.com/portal/averityteam/job/tsg1yif6ye3oaebo6con41cwdc'>Senior Software Engineer: Ruby-on-Rails | Averity</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://hotjar.recruitee.com/o/senior-software-engineer-data-emea'>
+      Senior Software Engineer, Data (EMEA) - Hotjar
+    </a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://profacebook.applytojob.com/apply/48NWbDkJOw/Software-Engineer-9279803'>Software Engineer (9279803) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://profacebook.applytojob.com/apply/5UbDttvInv/Firmware-Software-Engineer-IV'>Firmware Software Engineer IV - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://profacebook.applytojob.com/apply/0PxjLpCn4L/Modeling-Software-Engineer-9382823'>Modeling Software Engineer (9382823) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://profacebook.applytojob.com/apply/LFRM4Qnawv/Visualization-Tools-Software-Engineer'>Visualization tools software engineer - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://urbint.workable.com/j/E768B2B629'>Urbint - Jobs: Software Engineer - Apply online</a></h5> 
+<p><span class="badge badge-light">New York, United States</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/ProgressiveTechnologySolutions1/743999692304035-software-developer'>Progressive technology solutions Software Developer | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Woodland Hills, CA California North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1694555'>Job Application for Software Engineer - Visibility  at Fitbit</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1781648'>Job Application for Sr. Android Software Engineer at Fitbit</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Diego</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1785796'>Job Application for Software Engineer - API Management  at Fitbit</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/varomoney/baf789f9-6a67-4d15-ae4d-4291e431119c'>Varo Money - Senior Software Engineer</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.lever.co/varomoney/e7bdaa31-325a-4376-bab4-6b0bd667724d'>Varo Money - Senior Software Engineer</a></h5> 
@@ -68,7 +108,7 @@
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=oP7A8fwo&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=njCSVLwY'>Guidewire Software, Inc. Careers - Senior Software Engineer, Front End - Krakow, Poland</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Krakow, Poland</span></p>
 <p>Posted on:: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/thousandeyes/jobs/1790671'>Job Application for Principal Software Engineer, Endpoint at ThousandEyes</a></h5> 
@@ -123,7 +163,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/zscaler/job/oN247fwK'>Zscaler Careers - Staff Software Engineer - (C language)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/zscaler/job/oN247fwK'>Zscaler Careers - Staff Software Engineer - (C language)</a></h5> 
 <p><span class="badge badge-light">Canada Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -316,7 +356,7 @@ riskmethods.</p>
 <p>Jul 19, 2019 ... Apply online for the job of Staff Software Engineer, System Generalist (Content 
 Platform) at SmartNews, Inc.</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://deposit-solutions.workable.com/j/A54C07E8B7?viewed=true'>Java Software Engineer - Apply ... - Deposit Solutions GmbH - Jobs</a></h5> 
+<h5><a href='https://deposit-solutions.workable.com/j/A54C07E8B7?viewed=true'>Java Software Engineer - Apply ... - Deposit Solutions GmbH - Jobs</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 18, 2019 ... Apply online for the job of Java Software Engineer at Deposit Solutions GmbH.</p>
 <hr/>
@@ -324,7 +364,7 @@ Platform) at SmartNews, Inc.</p>
 <p><span class="badge badge-light">Austin,</span></p>
 <p>Posted on:: 2019-07-26</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/wellsky/jobs/1760626'>Job Application for Software Engineer at WellSky </a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/wellsky/jobs/1760626'>Job Application for Software Engineer at WellSky </a></h5> 
 <p><span class="badge badge-light">Kansas, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -340,7 +380,7 @@ Platform) at SmartNews, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://medbridge.applytojob.com/apply/jN18MVl59s/Front-End-Software-Engineer-III-Lehi-UT'>Front End Software Engineer III (Lehi, UT) - MedBridge - Career Page</a></h5> 
+<h5><a href='http://medbridge.applytojob.com/apply/jN18MVl59s/Front-End-Software-Engineer-III-Lehi-UT'>Front End Software Engineer III (Lehi, UT) - MedBridge - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -356,7 +396,7 @@ Platform) at SmartNews, Inc.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://hostway.workable.com/j/052BD9FB63'>Hostway | HOSTING - Jobs: Senior Software Engineer (.NET) - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hostway.workable.com/j/052BD9FB63'>Hostway | HOSTING - Jobs: Senior Software Engineer (.NET) - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -388,7 +428,7 @@ Platform) at SmartNews, Inc.</p>
 <p><span class="badge badge-light">Shenzhen, Guangdong, China</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kennasecurity/d2bc48ad-b03e-4e69-8db8-1dd02c9d1c20'>Kenna Security - Software Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/kennasecurity/d2bc48ad-b03e-4e69-8db8-1dd02c9d1c20'>Kenna Security - Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -407,45 +447,6 @@ Platform) at SmartNews, Inc.</p>
 <h5><a href='https://jobs.lever.co/thredup/1d78c462-507f-400a-b307-93d9d5887844'>thredUP - Senior Software Engineer (Rails/React) to Supply Growth Team</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/retailindia/jobs/1765888'>Job Application for Software Engineer - Backend  at Endurance International Group - India</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=od257fwb&__jvst=Employee&__jvsd=sBKSFgwD&__jvsc=Twitter&bid=nKuPUKwc'>Guidewire Software, Inc. Careers - Senior Software Engineer - Backend - San Mateo, CA</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on:: 2019-07-26</p>
-<hr/>
-<h5><a href='https://nezasa.join.com/jobs/262609-backend-software-engineer'>Job @ Nezasa (Lisbon): Backend Software Engineer | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://nezasa.join.com/jobs/267120-full-stack-software-engineer'>Job @ Nezasa (Lisbon): Full-Stack Software Engineer | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://rek-swiss.join.com/jobs/258626-javaee-software-developer'>Job @ REK-Swiss (Z?rich): JavaEE Software Developer | JOIN</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>16. Juli 2019 ... REK-Swiss has a job opening for JavaEE Software Developer in Z?rich (
-published: 29.09.2018). Apply now or check the other available jobs.</p>
-<hr/>
-<h5><a href='https://blackbaud.wd1.myworkdayjobs.com/en-US/ExternalCareers/job/Austin---Texas/Principal-Software-Engineer--NET-C--Angular---Faith-Based_R0004845-1?source=BuiltinAustin'>Software Engineer, .NET C# Angular - Faith Based</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 17, 2019 ... We lead uniquely at the intersection point of technology and social good, 
-providing cloud software, services, expertise, and data intelligence that 
-empowers and?...</p>
-<hr/>
-<h5><a href='https://dtcc.referrals.selectminds.com/jobs/senior-software-engineer-2676'>Senior Software Engineer - DTCC Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999692127148-software-engineer-cloud-aws-node-js-'>K4Connect Software Engineer - Cloud (AWS, Node.js) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/K4Connect/743999692194360-software-engineer-qa-full-stack-javascript-'>K4Connect Software Engineer - QA (Full Stack JavaScript) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-25</p>
 <hr/>
 
 
