--- a/project-manager.html
+++ b/project-manager.html
@@ -40,34 +40,82 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://boards.greenhouse.io/akqa/jobs/1778248'>Job Application for Senior Project Manager (Melbourne) at AKQA</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/akqa/jobs/1792029'>Job Application for Project Manager at AKQA</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://boards.greenhouse.io/akqa/jobs/1793266'>Job Application for Project Manager at AKQA</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://grahammanagementserviceslp.applytojob.com/apply/IYREub4tgF/Project-Manager-Buildings'>Project Manager - Buildings - Graham Construction - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://condenastuk.avature.net/careers/JobDetail/Acting-Senior-Project-Manager-GQ-WIRED/1974'>Acting Senior Project Manager, GQ & WIRED - Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://grahammanagementserviceslp.applytojob.com/apply/yegJCIDyFe/Senior-Project-Manager-Infrastructure'>Senior Project Manager - Infrastructure - Graham Construction - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://careers.jobscore.com/careers/morphe/jobs/project-manager-visual-merchandising-azIQsaN1Wr6AVZaICoXfFy'>Project Manager, Visual Merchandising #0941 job at Morphe in San Francisco, CA, powered by JobScore</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://profacebook.applytojob.com/apply/Ou3a9lmbjk/Program-Manager-I'>Program Manager I - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://profacebook.applytojob.com/apply/B0R8UQlcl7/Project-Manager-III'>Project Manager III - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://profacebook.applytojob.com/apply/jxpY5wI4Ga/Project-Manager-9276707'>Project Manager (9276707) - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://profacebook.applytojob.com/apply/yRP57Lmwm3/Project-Manager-Product-Operations'>Project Manager, Product Operations - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='http://profacebook.applytojob.com/apply/lqIxe3ubUr/Enterprise-Sales-Channel-Development-Administrative-Project-Manager'>Enterprise Sales & Channel Development Administrative Project Manager - PRO Unlimited @ Facebook - Career Page</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='http://thalle.recruiterbox.com/jobs/fk031qj'>
     Project Manager -Heavy Civil Construction  at Thalle Construction  Company
 </a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='http://jobs.jobvite.com/ringcentral/job/oMpDafwI'>RingCentral Careers - Customer Communications Project Manager</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Denver Denver</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Version1/743999692174805-jde-project-manager'>Version 1 JDE Project Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/Version1/743999692175201-jde-project-manager'>Version 1 JDE Project Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://jobs.smartrecruiters.com/ProgressiveTechnologySolutions1/743999692305161-program-manager-licensing-operations'>Progressive technology solutions Program Manager, Licensing Operations | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">California North America</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1780971'>Job Application for Technical Program Manager at Fitbit</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Minsk</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1788731'>Job Application for Technical Program Manager at Fitbit</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://fairfx.recruitee.com/o/senior-project-manager'>
@@ -92,7 +140,7 @@
 <p><span class="badge badge-light">Austin</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://johnson-electric-4.workable.com/j/0303CC3DDB'>Johnson Electric - Jobs: Project Manager - Apply online</a></h5> 
+<h5><a href='https://johnson-electric-4.workable.com/j/0303CC3DDB'>Johnson Electric - Jobs: Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -100,11 +148,11 @@
 <p><span class="badge badge-light">Arkansas, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://quad.referrals.selectminds.com/jobs/operations-support-project-manager-12689'>Operations Support Project Manager - Be Quad</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://quad.referrals.selectminds.com/jobs/operations-support-project-manager-12689'>Operations Support Project Manager - Be Quad</a></h5> 
 <p><span class="badge badge-light">Arkansas, United States</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://wonderment.workable.com/j/416B49A91D'>Wonderment Apps - Jobs: Scrum Master / Project Manager - Apply online</a></h5> 
+<h5><a href='https://wonderment.workable.com/j/416B49A91D'>Wonderment Apps - Jobs: Scrum Master / Project Manager - Apply online</a></h5> 
 <p><span class="badge badge-light">Irvine, California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -196,7 +244,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/6721169EBC'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<h5><a href='https://right-at-school.workable.com/j/6721169EBC'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -244,7 +292,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/A972DA74B6'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<h5><a href='https://right-at-school.workable.com/j/A972DA74B6'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -284,7 +332,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/F4AD933340'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<h5><a href='https://right-at-school.workable.com/j/F4AD933340'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -304,7 +352,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/altisource/jobs/1760335'>Job Application for Project Manager at Altisource</a></h5> 
+<h5><a href='https://boards.greenhouse.io/altisource/jobs/1760335'>Job Application for Project Manager at Altisource</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -320,7 +368,7 @@
 <p><span class="badge badge-light">Mexico</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/project-manager-oncology-30235'>Project Manager (Oncology) - Syneos Health Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://syneoshealth.referrals.selectminds.com/jobs/project-manager-oncology-30235'>Project Manager (Oncology) - Syneos Health Careers</a></h5> 
 <p><span class="badge badge-light">North America</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -364,7 +412,7 @@
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/myriadsupply/jobs/4214971002?gh_jid=4214971002'>Job Application for Project Manager I  at Myriad360</a></h5> 
+<h5><a href='https://boards.greenhouse.io/myriadsupply/jobs/4214971002?gh_jid=4214971002'>Job Application for Project Manager I  at Myriad360</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -376,7 +424,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/caminar/job/onzDafwt'>Caminar Careers - Program Manager, Substance Use (LMFT/LCSW)</a></h5> 
+<h5><a href='http://jobs.jobvite.com/caminar/job/onzDafwt'>Caminar Careers - Program Manager, Substance Use (LMFT/LCSW)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -396,56 +444,6 @@
 <hr/>
 <h5><a href='https://boards.greenhouse.io/udacity/jobs/4369208002'>Job Application for Senior Program Manager at Udacity</a></h5> 
 <p><span class="badge badge-light">Mountain View, CA</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://lewisham.referrals.selectminds.com/jobs/creative-enterprise-zone-cez-relationships-project-manager-771'>Creative Enterprise Zone (CEZ) Relationships & Project Manager - Lewisham Jobs Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='http://agoraio.applytojob.com/apply/5uC265LyaM/Technical-Project-Manager-Contract'>Technical Project Manager (Contract) - Agora.io - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Eurofins/743999692352027-project-manager-m-f-d-it-solutions'>Eurofins Project Manager (m/f/d) IT Solutions | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Colliers1/743999692349909-project-manager-project-management'>Colliers Project Manager | Project Management | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Tradeshift/743999692352243-seller-implementation-project-manager'>Tradeshift Seller Implementation Project Manager | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://4re.referrals.selectminds.com/elsevier/jobs/program-manager-25264'>Program Manager - ELSEVIER Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>4 days ago ... This position works with a wide variety of exciting teams including back-end 
-intelligent processing, customer onboarding, front-end development and data?...</p>
-<hr/>
-<h5><a href='https://hostway.workable.com/j/9A9686BD68'>Hostway | HOSTING - Jobs: Global Partner Project Manager - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://boards.greenhouse.io/bayada/jobs/4372442002'>Job Application for RN Program Manager, Senior Living, Home Health at BAYADA Home Health Care</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://camelot.workable.com/j/64892C04F1'>Camelot Group - Jobs: Senior Digital Project Manager - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://assist-rx.workable.com/j/54074E29FB'>AssistRx - Jobs: Senior Project Manager - Healthcare - Apply online</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://imiindustrialservices.applicantstack.com/x/detail/a20jg2btyc2b'>Industrial Mechanical Project Manager - IMI Industrial Services Group</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Jul 12, 2019 ... Initiative ? Has the ability to identify key issues, develop a workable solution from 
-data and working with others, sells his/her solution and implements the solution?...</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/logitech/job/oGKCafwW'>Logitech Careers - Privacy Program Manager</a></h5> 
-<p><span class="badge badge-light">Cork, Ireland California</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 
