--- a/frontend.html
+++ b/frontend.html
@@ -177,7 +177,7 @@ published: 19.06.2019). Apply now or check the other available jobs.</p>
 <p><span class="badge badge-light">Denmark</span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
-<h5><a href='http://latitudeinc.applytojob.com/apply/V10V2xOXa1/Front-End-Developer-Needed-Near-Norristown'>Front End Developer Needed Near Norristown - Latitude, Inc. - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://latitudeinc.applytojob.com/apply/V10V2xOXa1/Front-End-Developer-Needed-Near-Norristown'>Front End Developer Needed Near Norristown - Latitude, Inc. - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-25</p>
 <hr/>
@@ -287,7 +287,7 @@ the?...</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
-<h5><a href='https://jobs.lever.co/kraken/9779388e-f3f7-493d-a469-6d5dd43c8108'>Kraken Digital Asset Exchange - Software Engineer, Frontend - Cryptowatch</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/kraken/9779388e-f3f7-493d-a469-6d5dd43c8108'>Kraken Digital Asset Exchange - Software Engineer, Frontend - Cryptowatch</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-24</p>
 <hr/>
