Translation Project Manager - NATO Careers. Senior Translation Project Manager - NATO Careers. Project Manager, Architecture - Ware Malcomb - Career Page. Job Application for Senior Project Manager (Melbourne) at AKQA. Job Application for Project Manager at AKQA. Job Application for Project Manager at AKQA. Project Manager - Buildings - Graham Construction - Career Page. Acting Senior Project Manager, GQ & WIRED - Careers. Senior Project Manager - Infrastructure - Graham Construction - Career Page. Project Manager, Visual Merchandising #0941 job at Morphe in San Francisco, CA, powered by JobScore. Program Manager I - PRO Unlimited @ Facebook - Career Page. Project Manager III - PRO Unlimited @ Facebook - Career Page. Project Manager (9276707) - PRO Unlimited @ Facebook - Career Page. Project Manager, Product Operations - PRO Unlimited @ Facebook - Career Page. Enterprise Sales & Channel Development Administrative Project Manager - PRO Unlimited @ Facebook - Career Page.     Project Manager -Heavy Civil Construction  at Thalle Construction  Company . RingCentral Careers - Customer Communications Project Manager. Version 1 JDE Project Manager | SmartRecruiters. Version 1 JDE Project Manager | SmartRecruiters. Progressive technology solutions Program Manager, Licensing Operations | SmartRecruiters. Job Application for Technical Program Manager at Fitbit. Job Application for Technical Program Manager at Fitbit.       Senior Project Manager - FairFX     . PrimeRevenue Careers - Project Manager. Job Application for Sr. Technical Program Manager at Twitch. Netflix - Talent Mobility Program Manager. Abrigo Careers - Implementation Project Manager. Johnson Electric - Jobs: Project Manager - Apply online. Operations Support Project Manager - Be Quad. Operations Support Project Manager - Be Quad. Wonderment Apps - Jobs: Scrum Master / Project Manager - Apply online. Job Application for Project Manager - New Factory: Composites Production at Lilium. Job Application for Project 

--- a/project-manager.html
+++ b/project-manager.html
@@ -40,20 +40,28 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://ncianato.referrals.selectminds.com/jobs/translation-project-manager-579'>Translation Project Manager - NATO Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
+<h5><a href='https://ncianato.referrals.selectminds.com/jobs/senior-translation-project-manager-580'>Senior Translation Project Manager - NATO Careers</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-07-27</p>
+<hr/>
 <h5><a href='http://waremalcomb.applytojob.com/apply/LlCWnhlqax/Project-Manager-Architecture'>Project Manager, Architecture - Ware Malcomb - Career Page</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/akqa/jobs/1778248'>Job Application for Senior Project Manager (Melbourne) at AKQA</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Melbourne Melbourne Melbourne</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/akqa/jobs/1792029'>Job Application for Project Manager at AKQA</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://boards.greenhouse.io/akqa/jobs/1793266'>Job Application for Project Manager at AKQA</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='http://grahammanagementserviceslp.applytojob.com/apply/IYREub4tgF/Project-Manager-Buildings'>Project Manager - Buildings - Graham Construction - Career Page</a></h5> 
@@ -65,7 +73,7 @@
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='http://grahammanagementserviceslp.applytojob.com/apply/yegJCIDyFe/Senior-Project-Manager-Infrastructure'>Senior Project Manager - Infrastructure - Graham Construction - Career Page</a></h5> 
-<p><span class="badge badge-light"></span></p>
+<p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
 <h5><a href='https://careers.jobscore.com/careers/morphe/jobs/project-manager-visual-merchandising-azIQsaN1Wr6AVZaICoXfFy'>Project Manager, Visual Merchandising #0941 job at Morphe in San Francisco, CA, powered by JobScore</a></h5> 
@@ -106,7 +114,7 @@
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Version1/743999692175201-jde-project-manager'>Version 1 JDE Project Manager | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Version1/743999692175201-jde-project-manager'>Version 1 JDE Project Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -118,7 +126,7 @@
 <p><span class="badge badge-light">Minsk</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1788731'>Job Application for Technical Program Manager at Fitbit</a></h5> 
+<h5><a href='https://boards.greenhouse.io/fitbit92/jobs/1788731'>Job Application for Technical Program Manager at Fitbit</a></h5> 
 <p><span class="badge badge-light">Boston</span></p>
 <p>Posted on: 2019-07-27</p>
 <hr/>
@@ -284,7 +292,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://right-at-school.workable.com/j/9F490F0892'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
+<h5><a href='https://right-at-school.workable.com/j/9F490F0892'>Right At School - Jobs: Program Manager - Apply online</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -384,7 +392,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://aluperf.referrals.selectminds.com/jobs/rdc-care-project-manager-with-french-33144'>RDC Care Project Manager with French - Nokia Careers</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://aluperf.referrals.selectminds.com/jobs/rdc-care-project-manager-with-french-33144'>RDC Care Project Manager with French - Nokia Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -432,18 +440,8 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Dcode1/743999692302585-accelerator-program-manager'>Dcode Accelerator Program Manager | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Dcode1/743999692302585-accelerator-program-manager'>Dcode Accelerator Program Manager | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='http://HUMANCARESYSTEMS.recruiterbox.com/jobs/fk03fnc'>
-    Senior Program Manager at Humancaresystems
-</a></h5> 
-<p><span class="badge badge-light">Boston, Massachusetts</span></p>
-<p>Posted on: 2019-07-26</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/socrata/job/oolDafwg'>Socrata Careers - Partner Program Manager</a></h5> 
-<p><span class="badge badge-light">Seattle</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
 
